# ao3-rss

./: README.md  main.py  pyproject.toml
ao3_rss/: __init__.py  generator.py  views.py
ao3_rss/templates/: base.html  index.html
